CONTRAST-15036 fixed styling on decryption form, removed unnecessary part of table

--- a/static/app/css/users/pay/index.css
+++ b/static/app/css/users/pay/index.css
@@ -6,6 +6,7 @@
 
 #payIndex .form-inline {
     margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 #payIndex .row {
